Fix alignment and change button text colour to white for registration page

--- a/myclean/static/css/style.css
+++ b/myclean/static/css/style.css
@@ -59,8 +59,6 @@ footer {
 .register-box {
     height: auto;
     width: 500px;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 5vh;
     display: flex;
     flex-direction: column;
@@ -133,6 +131,7 @@ footer {
     border-radius: 7px;
     border: 1px solid black;
     background-color: #5076BD;
+    color: white;
 }
 
 /* .register-sp button {
